# cpp-cmake-ctest-template

./: .gitmodules  CMakeLists.txt
src/: CE207-kalender-kose-tuysuz-ayan.sln
src/CE207-midterm-app/: CE207-midterm-app.vcxproj  CE207-midterm-app.vcxproj.filters  CMakeLists.txt  HelloApp.c
src/CE207-midterm-lib/: CE207-midterm-lib.vcxproj  CE207-midterm-lib.vcxproj.filters  CMakeLists.txt  hello.h
src/tests/: CMakeLists.txt
src/tests/CE207-midterm-tests/: CE207-midterm-tests.vcxproj  HelloTest.cpp
